force-app/main/default/objects/ProviderCredential__c/ProviderCredential__c.object-meta.xml
<CustomObject>
    <description>This object stores comprehensive credentialing information for healthcare providers, including hospital privileges, malpractice insurance, insurance paneling, and professional history.</description>
    <label>Provider Credential</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Credential ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>