force-app/main/default/objects/ProviderCredential__c/fields/Credential_Score_Completeness__c.field-meta.xml
<CustomField>
    <fullName>Credential_Score_Completeness__c</fullName>
    <label>Credential Score - Completeness</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>