force-app/main/default/objects/ProviderCredential__c/fields/Credential_Score_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Credential_Score_Risk_Level__c</fullName>
    <label>Credential Score - Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>