force-app/main/default/objects/ProviderCredential__c/fields/Credentialing_Status__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Status__c</fullName>
    <label>Credentialing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
                <default>true</default>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>In Verification</fullName>
            </value>
            <value>
                <fullName>Pending Hospital Response</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>