force-app/main/default/objects/ProviderCredential__c/fields/Has_Malpractice_Document__c.field-meta.xml
<CustomField>
    <fullName>Has_Malpractice_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Malpractice Document</label>
    <type>Checkbox</type>
</CustomField>