force-app/main/default/objects/ProviderCredential__c/fields/Hospital_Privileges_Verified__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Privileges_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital Privileges Verified</label>
    <type>Checkbox</type>
</CustomField>