force-app/main/default/objects/ProviderCredential__c/fields/Malpractice_Aggregate_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Aggregate_Coverage__c</fullName>
    <label>Malpractice Aggregate Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>