force-app/main/default/objects/ProviderCredential__c/fields/Malpractice_AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_AI_Confidence__c</fullName>
    <label>Malpractice AI Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>