force-app/main/default/objects/ProviderCredential__c/fields/Malpractice_AI_Notes__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_AI_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Malpractice AI Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>