force-app/main/default/objects/ProviderCredential__c/fields/Malpractice_Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Coverage_Amount__c</fullName>
    <label>Malpractice Coverage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>