force-app/main/default/objects/ProviderCredential__c/fields/Malpractice_Coverage_Currency__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Coverage_Currency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Malpractice Coverage Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>