force-app/main/default/objects/ProviderCredential__c/fields/Malpractice_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Malpractice Expiration Date</label>
    <type>Date</type>
</CustomField>