force-app/main/default/objects/ProviderCredential__c/fields/Malpractice_Insurance_Verified__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Insurance_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Malpractice Insurance Verified</label>
    <type>Checkbox</type>
</CustomField>