force-app/main/default/objects/ProviderCredential__c/fields/Malpractice_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Policy_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Malpractice Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>