force-app/main/default/objects/ProviderCredential__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Provider Credentials</relationshipLabel>
    <relationshipName>Provider_Credentials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>