force-app/main/default/objects/ProviderCredential__c/fields/Requires_Manual_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manual_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Manual Review</label>
    <type>Checkbox</type>
</CustomField>