force-app/main/default/objects/ProviderCredential__c/validationRules/Malpractice_Cannot_Be_Expired.validationRule-meta.xml
<ValidationRule>
    <fullName>Malpractice_Cannot_Be_Expired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(       Malpractice_Insurance_Verified__c = TRUE,       NOT(ISBLANK(Malpractice_Expiration_Date__c)),       Malpractice_Expiration_Date__c &lt; TODAY()     )</errorConditionFormula>
    <errorDisplayField>Malpractice_Expiration_Date__c</errorDisplayField>
    <errorMessage>You can&apos;t mark malpractice insurance as Verified if the expiration date is in the past.</errorMessage>
</ValidationRule>