force-app/main/default/objects/ProviderCredential__c/validationRules/Malpractice_Details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Malpractice_Details_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(       Malpractice_Insurance_Verified__c = TRUE,       OR(         ISBLANK(Malpractice_Policy_Number__c),         ISBLANK(Malpractice_Coverage_Amount__c),         ISBLANK(Malpractice_Expiration_Date__c)       )     )</errorConditionFormula>
    <errorDisplayField>Malpractice_Insurance_Verified__c</errorDisplayField>
    <errorMessage>To mark malpractice insurance as Verified, you must enter Policy Number, Coverage Amount, and Expiration Date.</errorMessage>
</ValidationRule>