force-app/main/default/objects/ProviderCredential__c/validationRules/Privilege_Status_Requires_Verified.validationRule-meta.xml
<ValidationRule>
    <fullName>Privilege_Status_Requires_Verified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(       ISPICKVAL(Privilege_Status__c, &quot;Active&quot;),       NOT(Hospital_Privileges_Verified__c)     )</errorConditionFormula>
    <errorDisplayField>Privilege_Status__c</errorDisplayField>
    <errorMessage>Hospital Privileges Verified must be checked before setting Privilege Status to Active.</errorMessage>
</ValidationRule>